--- a/main.html
+++ b/main.html
@@ -11,23 +11,23 @@
 	<form>
 		<label for "name">Name</label>
 		<input type="text" id="name">
-		<br>
+		<br><br>
 		<label for "Phone Number">Phone Number</label>
 		<input type="text" id="phone">
-		<br>
+		<br><br>
 		<label for "Address">Address</label>
 		<input type="text" id="address">
-		<br>
+		<br><br>
 		<label for "Have you ever lived with a Dog before?">Have you ever lived with a Dog before?</label>
 		<input type="checkbox" checked id="checkbox">
-		<br>
+		<br><br>
 		<label for "Please select your preferred breeds">Please select your preferred breeds</label>
 		<select id="multiSelect" name="Please select your preferred breeds" multiple>
 			<option>Bulldog</option>
-			<option>German Shepard>/option>
+			<option>German Shepard</option>
 			<option>Poodle</option>
 		</select>
-		<br>
+		<br><br>
 		<label for "submit">submit</label>
 		<input type="submit" value="Submit" id="submit">
 	
