--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 		<input type="text" id="address">
 		<br><br>
 		<label for "Have you ever lived with a Dog before?">Have you ever lived with a Dog before?</label>
-		<input type="checkbox" checked id="checkbox">
+		<input type="checkbox" id="checkbox">
 		<br><br>
 		<label for "Please select your preferred breeds">Please select your preferred breeds</label>
 		<select id="multiSelect" name="Please select your preferred breeds" multiple>
