--- a/main.html
+++ b/main.html
@@ -10,13 +10,13 @@
 	<!-- the entire body must be written by student -->
 	<form>
 		<label for "name">Name</label>
-		<input type="text" id="name">
+		<input type="text" id="name" placeholder="Name">
 		<br><br>
 		<label for "Phone Number">Phone Number</label>
-		<input type="text" id="phone">
+		<input type="text" id="phone" placeholder= "Phone Number">
 		<br><br>
 		<label for "Address">Address</label>
-		<input type="text" id="address">
+		<input type="text" id="address" placeholder= "Address">
 		<br><br>
 		<label for "Have you ever lived with a Dog before?">Have you ever lived with a Dog before?</label>
 		<input type="checkbox" id="checkbox">
