--- a/main.html
+++ b/main.html
@@ -30,6 +30,7 @@
 		<br><br>
 		<label for "submit">submit</label>
 		<input type="submit" value="Submit" id="submit">
+	</form>
 	
     <script type="text/javascript" src="./script.js">
 </script>
